# travelcanary-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  costguard.toml  dagster_instance.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  workspace.yaml
.dlt/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml
architecture/: index.html
changelog/: index.html
configuration/: index.html
consumer-guide/: index.html
data-contracts/: index.html
dbt/: dbt_project.yml
dbt/profiles/: profiles.yml
dbt/seeds/: advisory_level_normalization.csv  advisory_normalization_exceptions.csv  advisory_theme_keywords.csv  country_code_crosswalk.csv  fips10_4_to_iso3.csv  gdelt_event_root_codes.csv  insight_thresholds.csv  iso_countries.csv  schema.yml  source_contracts.csv
dbt/tests/: assert_country_advisory_changes_grain.sql  assert_country_advisory_themes_grain.sql  assert_country_context_alerts_grain.sql  assert_country_gdelt_event_types_grain.sql  assert_country_risk_trends_grain.sql  assert_country_travel_risk_grain.sql  assert_country_travel_risk_valid_iso3.sql  assert_gdelt_has_mapped_country_rows.sql  assert_no_unexpected_normalization_gaps.sql  assert_source_contracts_valid.sql
development/: index.html
docs/: architecture.md  changelog.md  configuration.md  consumer-guide.md  data-contracts.md  development.md  index.md  legal.md  naming.md  operations.md  quickstart.md  source-coverage.md  troubleshooting.md  warehouse.md
legal/: index.html
naming/: index.html
operations/: index.html
quickstart/: index.html
scripts/: audit_live_sources.py  export_history.py  export_public_marts.py  import_history.py  run_atomic_dbt_build.py  run_dbt_unit.py  run_live_smoke.py  seed_ci_warehouse.py  validate_ci_warehouse.py  validate_live_warehouse.py
search/: search_index.json
source-coverage/: index.html
src/travelcanary_pipeline/: __init__.py  (+5 more)
tests/: conftest.py  test_ci_workflow.py  test_docs_structure.py  test_makefile.py  test_naming_policy.py  test_repo_structure.py  test_secrets_not_committed.py
troubleshooting/: index.html
warehouse/: index.html
(+114 files in other folders)
